--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,11 @@
 </head>
 <body>
 <h1>Welcome to Index PAGE!</h1>
-
+<form th:action="@{/login}" th:method="GET">
+    <button type="submit">Login!</button>
+</form>
+<br>
+<a href="/registration">Registration</a>
 
 </body>
 </html>
