--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Spring Security Example</title>
+    <meta charset="UTF-8">
+    <title>User Info</title>
 </head>
 <body>
-<h1>User, welcome spring boot security page!</h1>
-
-
+<table border="1">
+    <thead>
+    <tr>
+        <th>ID</th>
+        <th>User name</th>
+        <th>Password</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:object="${user}">
+        <td th:text="${user.getId()}"></td>
+        <td th:text = "${user.getUsername()}"></td>
+        <td th:text = "${user.getPassword()}"></td>
+    </tr>
+    </tbody>
+</table>
+<br>
+<form name="logOut" th:action="@{/logout}" method="post">
+    <input type="submit" value="Exit">
+</form>
 </body>
 </html>
